--- a/src/app/user/community-user/community-user.component.html
+++ b/src/app/user/community-user/community-user.component.html
@@ -1,13 +1,17 @@
 <nz-table #fixedTable
+          [nzTitle]="tableTitleTpl"
           [nzLoading]="isLoading"
           [nzData]="listOfDisplayData"
           [(nzPageIndex)]="pageIndex"
           [(nzPageSize)]="pageSize"
+          [nzScroll]="{x: '1280px', y: '720px'}"
           nzShowSizeChanger>
   <thead>
   <tr>
-    <th>No.</th>
-    <th [nzSortFn]="fullNameColumnItem.sortFn" nzCustomFilter>
+    <th nzLeft nzWidth="80px">No.</th>
+    <th nzLeft
+        [nzSortFn]="fullNameColumnItem.sortFn"
+        nzCustomFilter>
       Full Name
       <nz-filter-trigger [(nzVisible)]="fullNameFilterIsVisible" [nzActive]="fullNameSearchValue.length > 0" [nzDropdownMenu]="fullNameFilterMenu">
         <i nz-icon nzType="search"></i>
@@ -25,20 +29,28 @@
         [nzFilterMultiple]="false">
       Account Status
     </th>
-    <th>View Profile</th>
+    <th nzRight nzWidth="120px" class="text-center">Action</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let data of fixedTable.data, let i = index">
-    <td>{{ (pageIndex - 1) * pageSize + i + 1 }}</td>
-    <td>{{ data?.fullName | uppercase }}</td>
+    <td nzLeft>{{ (pageIndex - 1) * pageSize + i + 1 }}</td>
+    <td nzLeft>{{ data?.fullName | uppercase }}</td>
     <td>{{ data?.nricNo || '-' }}</td>
     <td>{{ data?.email || '-' }}</td>
     <td>
       <nz-tag [nzColor]="'green'" *ngIf="data?.isActive === 'Y'">Activated</nz-tag>
       <nz-tag [nzColor]="'orange'" *ngIf="data?.isActive !== 'Y'">Unactivated</nz-tag>
-    <td>
-      <a nz-button nzType="link" [routerLink]="['/community-user-profile']" [queryParams]="{username: data.username}">View Profile</a>
+    <td nzRight class="text-center">
+    <button nz-button nzSize="small" nz-dropdown [nzClickHide]="false" [nzDropdownMenu]="menu1">
+      <i nz-icon nzType="ellipsis" nzTheme="outline"></i>
+    </button>
+    <nz-dropdown-menu #menu1="nzDropdownMenu">
+      <ul nz-menu>
+        <li nz-menu-item [routerLink]="['/community-user-profile']" [queryParams]="{username: data.username}">View User Profile</li>
+        <li nz-menu-item nz-popconfirm [nzPopconfirmTitle]="'Are you sure you want to delete ' + data?.fullName + '\'s account?'" (nzOnConfirm)="deleteUser(data.username)">Delete User</li>
+      </ul>
+    </nz-dropdown-menu>
     </td>
   </tr>
   </tbody>
@@ -59,3 +71,7 @@
     <button nz-button nzSize="small" (click)="resetNric()">Reset</button>
   </div>
 </nz-dropdown-menu>
+
+<ng-template #tableTitleTpl>
+  <h2 nz-typography>Community User</h2>
+</ng-template>
