Add Community User's Profile title

--- a/src/app/user/community-user-profile/community-user-profile.component.html
+++ b/src/app/user/community-user-profile/community-user-profile.component.html
@@ -12,6 +12,9 @@
   <button nz-button nzDanger nzType="primary" (click)="rejectAccount()">Reject</button>
 </ng-template>
 
+<h2 nz-typography>Community User's Profile</h2>
+<nz-divider class="mb-4"></nz-divider>
+
 <nz-spin [nzSpinning]="isLoading">
   <nz-card nzTitle="Personal Detail" class="mb-4">
     <nz-row class="mb-2">
@@ -118,5 +121,3 @@
     </nz-table>
   </nz-card>
 </nz-spin>
-
-
