Add alt for news image

--- a/src/app/shared/components/newsfeed/newsfeed.component.html
+++ b/src/app/shared/components/newsfeed/newsfeed.component.html
@@ -18,7 +18,7 @@
         <nz-card [nzCover]="coverTemplate">
           <ng-template #coverTemplate>
             <img style="height: 380px; object-fit: cover; object-position: center center" src="{{news.urlToImage || NEWS_PLACEHOLDER_IMG_URL}}"
-                 alt="">
+                 [alt]=" news.title || 'Default placeholder'">
           </ng-template>
           <h4 nz-typography>{{news.title}}</h4>
           <nz-divider></nz-divider>
