--- a/src/app/user/community-user-profile/community-user-profile.component.html
+++ b/src/app/user/community-user-profile/community-user-profile.component.html
@@ -106,21 +106,21 @@
               [(nzPageIndex)]="healthTablePageIndex"
               [(nzPageSize)]="healthTablePageSize"
               [nzData]="userProfile?.healthModelList"
-              [nzScroll]="{x: '1280px'}">
+              [nzScroll]="{x: '960px'}">
       <thead>
       <tr>
-        <th nzLeft nzWidth="20px">No.</th>
-        <th nzLeft nzWidth="40px">Disease Name</th>
-        <th nzWidth="300px">Description</th>
-        <th nzRight nzWidth="40px">Validation Status</th>
+        <th nzWidth="80px">No.</th>
+        <th nzWidth="150px">Disease Name</th>
+        <th nzWidth="500px">Description</th>
+        <th nzWidth="120px">Validation Status</th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let data of healthTable.data; let i = index">
-        <td nzLeft>{{(healthTablePageIndex - 1) * healthTablePageSize + i + 1}}</td>
-        <td nzLeft>{{data?.diseaseName || '-'}}</td>
+        <td>{{(healthTablePageIndex - 1) * healthTablePageSize + i + 1}}</td>
+        <td>{{data?.diseaseName || '-'}}</td>
         <td>{{data?.diseaseDescription || '-'}}</td>
-        <td class="text-center" nzRight>
+        <td>
           <nz-tag [nzColor]="'green'" *ngIf="data?.approvedBy && data?.approvedDate" nz-popover [nzPopoverContent]="validatedContentTpl">Validated</nz-tag>
           <nz-tag [nzColor]="'gold'" *ngIf="!(data?.approvedBy && data?.approvedDate)">Pending</nz-tag>
           <ng-template #validatedContentTpl>
