Add issueId to HealthModel, fix healthForm mapping issue

--- a/src/app/user/signup-health-form/signup-health-form.component.html
+++ b/src/app/user/signup-health-form/signup-health-form.component.html
@@ -29,7 +29,7 @@
             </nz-form-control>
           </nz-form-item>
 
-          <nz-form-item *ngIf="isSignUp">
+          <nz-form-item>
             <nz-form-label class="fw-bold" [nzXs]="24" [nzMd]="4">Description</nz-form-label>
             <nz-form-control [nzXs]="24" [nzMd]="20">
               <textarea rows="4" nz-input formControlName="description"></textarea>
