Change post text colour to black

--- a/src/app/shared/components/post-feed/post-feed.component.html
+++ b/src/app/shared/components/post-feed/post-feed.component.html
@@ -23,7 +23,7 @@
       </ng-template>
 
       <ng-template #descriptionTemplate>
-        <p innerHTML="{{post?.postDescription || '-'}}"></p>
+        <p nz-typography class="text-dark" innerHTML="{{post?.postDescription || '-'}}"></p>
       </ng-template>
 
     </nz-card>
