--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -29,6 +29,15 @@
     </nz-form-control>
   </nz-form-item>
 
+  <nz-form-item *ngIf="incorrectLogin">
+    <nz-col [nzSm]="6" [nzXs]="24"></nz-col>
+    <nz-col [nzSm]="18" [nzXs]="24">
+      <div nz-col [nzSpan]="6" style="color: #ff4d4f">
+        Incorrect username/password.
+      </div>
+    </nz-col>
+  </nz-form-item>
+
   <nz-form-item>
     <nz-col [nzSm]="6" [nzXs]="24"></nz-col>
     <nz-col [nzSm]="18" [nzXs]="24">
