--- a/src/app/shared/components/post-feed/post-feed.component.html
+++ b/src/app/shared/components/post-feed/post-feed.component.html
@@ -16,8 +16,16 @@
           </nz-col>
 
           <nz-col [nzXs]="24" [nzSm]="12" *ngIf="isAdminLoggedIn">
-            <button class="float-end" nz-button nzDanger nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this post?" (nzOnConfirm)="deletePost(post?.postId)">Delete</button>
+            <button class="float-end" nz-button nz-dropdown [nzDropdownMenu]="menu4">Action<i nz-icon nzType="down"></i></button>
+            <nz-dropdown-menu #menu4="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item (click)="editPost(post?.postId)">Edit Post</li>
+                <li nz-menu-item nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this post?" (nzOnConfirm)="deletePost(post?.postId)">Delete Post</li>
+              </ul>
+            </nz-dropdown-menu>
           </nz-col>
+
+          <app-new-post-modal [isVisible]="editPostModalIsVisible" (modalIsVisibleEmitter)="modalVisibleHasChange($event)" (addNewPostEmitter)="postListHasChanges($event)"></app-new-post-modal>
         </nz-row>
 
       </ng-template>
