Add admin management & detail component, Add add/delete staff feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,11 @@
         <a nz-button nzType="link">User</a>
       </li>
 
+      <li nz-menu-item nzMatchRouter *ngIf="isAdminUser()" routerLink="/admin-user">
+        <i nz-icon nzType="user"></i>
+        <a nz-button nzType="link">Admin</a>
+      </li>
+
       <li nz-menu-item nzMatchRouter *ngIf="hasUserLoggedIn()" [routerLink]="isAdminUser() ? '/admin-assistance' : 'community-user-assistance'">
         <i nz-icon nzType="alert"></i>
           <a nz-button nzType="link">Assistance</a>
