--- a/src/app/user/admin/admin-detail/admin-detail.component.html
+++ b/src/app/user/admin/admin-detail/admin-detail.component.html
@@ -63,6 +63,6 @@
 
   <ng-template #modalFooter>
     <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
-    <button nz-button nzType="primary" [disabled]="!adminForm.valid" (click)="handleOk()">Add Staff</button>
+    <button nz-button nzType="primary" [disabled]="!adminForm.valid" [nzLoading]="this.isSubmitting" (click)="handleOk()">Add Staff</button>
   </ng-template>
 </nz-modal>
