--- a/src/app/user/admin/admin-management/admin-management.component.html
+++ b/src/app/user/admin/admin-management/admin-management.component.html
@@ -50,7 +50,10 @@
       <nz-dropdown-menu #menu1="nzDropdownMenu">
         <ul nz-menu>
           <li nz-menu-item [routerLink]="['/community-user/profile']" [queryParams]="{username: data.username}">View User Profile</li>
-          <li nz-menu-item nz-popconfirm [nzPopconfirmTitle]="'Are you sure you want to delete ' + data?.fullName + '\'s account?'" (nzOnConfirm)="deleteUser(data.username)">Delete Staff</li>
+          <li nz-menu-item
+              nz-popconfirm
+              [nzPopconfirmTitle]="'Are you sure you want to delete ' + data?.fullName + '\'s account?'"
+              (nzOnConfirm)="deleteUser(data.username)">Delete Staff</li>
         </ul>
       </nz-dropdown-menu>
     </td>
