Move email column from community_user & admin tables to account table

--- a/src/app/user/community-user-profile/community-user-profile.component.html
+++ b/src/app/user/community-user-profile/community-user-profile.component.html
@@ -48,7 +48,7 @@
 
     <nz-row class="mb-2">
       <nz-col class="fw-bold" [nzXs]="24" [nzMd]="4">Email</nz-col>
-      <nz-col [nzXs]="24" [nzMd]="20">{{userProfile?.personalDetail?.email || '-'}}</nz-col>
+      <nz-col [nzXs]="24" [nzMd]="20">{{userProfile?.email || '-'}}</nz-col>
     </nz-row>
   </nz-card>
 
