--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -42,7 +42,7 @@
     <nz-col [nzSm]="6" [nzXs]="24"></nz-col>
     <nz-col [nzSm]="18" [nzXs]="24">
       <div nz-col [nzSpan]="6">
-        <a>Forgot password</a>
+        <a [routerLink]="['/reset']">Forgot password</a>
       </div>
     </nz-col>
   </nz-form-item>
